frontend/test/should_fail/computations_no_break_continue_006.grg
pattern p()
{
	modify {
		eval {
			if(true) {
				break;
			}
		}
	}
}
